--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,75 @@
   margin: 0 auto;
 }
 
+.header {
+  background-color: #3B1D60;
+  color: #fff;
+}
+
 .header .navbar {
   width: 100%;
+  height: 80px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 12px;
+}
+
+.header .navbar .logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 80px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header .navbar .logo img {
+  width: 60%;
+  height: 60%;
+}
+
+.header .navbar h1 {
+  font-size: 25px;
+  margin-left: 15px;
+}
+
+.header .navbar ul li {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+.header .navbar ul li a {
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 12px;
+}
+
+.header .navbar .language {
+  font-size: 12px;
+}
+
+.header .navbar .language .lan-uz {
+  padding-right: 10px;
+  border-right: 1px solid #fff;
+}
+
+.header .navbar .language .lan-en {
+  padding-left: 8px;
+}
+
+.header .navbar .language a {
+  color: #fff;
+}
+
+.header .navbar .buttons {
+  font-size: 12px;
 }
 /*# sourceMappingURL=style.css.map */
