--- a/css/style.css
+++ b/css/style.css
@@ -103,8 +103,45 @@ body {
 }
 
 .content .content_information h1 {
+  width: 89%;
+  line-height: 45px;
   font-size: 44px;
   font-family: 'Oxygen', sans-serif;
+  color: #99EFD0;
+  font-weight: bold;
+}
+
+.content .content_information p {
+  width: 40%;
+  margin-top: 0.7rem;
+  font-size: 16px;
+  font-family: 'Oxygen', sans-serif;
+  color: #8476AA;
+}
+
+.content .content_information #input {
+  background: linear-gradient(222.26deg, #3B1D60 1.22%, #040D3E 106.28%);
+  border: 1px solid #F2994A;
+  margin-top: 2rem;
+  padding: 0.5rem;
+  border-radius: 5px;
+  color: #99EFD0;
+  outline: none;
+}
+
+.content .content_information .btn_get {
+  background: #F2994A;
+  -webkit-box-shadow: -11.09px 18.13px 36.6483px rgba(242, 153, 74, 0.13);
+          box-shadow: -11.09px 18.13px 36.6483px rgba(242, 153, 74, 0.13);
+  color: white;
+  padding: 0.5rem;
+  border-radius: 5px;
+  border: 1px solid #F2994A;
+  cursor: pointer;
+}
+
+.content .content_information .btn_get i {
+  margin-left: 5px;
 }
 
 .content .content_img {
@@ -113,5 +150,7 @@ body {
 
 .content .content_img img {
   width: 90%;
+  margin-left: 3rem;
+  margin-top: 2rem;
 }
 /*# sourceMappingURL=style.css.map */
