--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,19 @@
           box-sizing: border-box;
 }
 
+@font-face {
+  font-family: 'Gilroy';
+  src: url("../gilroy/Gilroy-SemiBoldItalic.ttf") format("truetype");
+}
+
+p {
+  font-family: 'Gilroy';
+}
+
+body {
+  background: linear-gradient(222.26deg, #3B1D60 1.22%, #040D3E 106.28%);
+}
+
 .container {
   width: 85%;
   margin: 0 auto;
@@ -17,11 +30,7 @@ body {
 }
 
 .header {
-<<<<<<< HEAD
-=======
-  background: linear-gradient(222.26deg, #3B1D60 1.22%, #040D3E 106.28%);
   height: 100vh;
->>>>>>> aaae601ddb214042d48fd064f263bd62c9a8818b
   color: #fff;
 }
 
@@ -216,5 +225,28 @@ body {
 
 .content .content_img img {
   width: 90%;
+}
+
+.blok {
+  width: 100%;
+}
+
+.blok .blok-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.blok .blok-box .blok-blog-1 {
+  width: 50%;
+}
+
+.blok .blok-box .blok-blog-1 img {
+  width: 50%;
+  border-radius: 50%;
+}
+
+.blok .blok-box .blok-blog-2 {
+  width: 50%;
 }
 /*# sourceMappingURL=style.css.map */
