--- a/css/style.scss
+++ b/css/style.scss
@@ -5,6 +5,16 @@
     list-style: none;
     box-sizing: border-box;
 }
+@font-face {
+    font-family: 'Gilroy';
+    src: url('../gilroy/Gilroy-SemiBoldItalic.ttf') format('truetype');
+}
+p {
+    font-family: 'Gilroy';
+}
+body {
+    background: linear-gradient(222.26deg, #3B1D60 1.22%, #040D3E 106.28%);
+}
 .container {
     width: 85%;
     margin: 0 auto;
@@ -17,7 +27,6 @@ body{
 }
 
 .header {
-<<<<<<< HEAD
     #logo {
         //  TODO:
         @keyframes hover {
@@ -33,10 +42,7 @@ body{
             animation: hover 4s infinite;
         
     }
-=======
-    background: linear-gradient(222.26deg, #3B1D60 1.22%, #040D3E 106.28%);
     height: 100vh;
->>>>>>> aaae601ddb214042d48fd064f263bd62c9a8818b
     @include colornav();
     .navbar-full {
         background-color: #3B1D60;
@@ -156,6 +162,23 @@ body{
 
         }
     }
-    
-    
+}
+
+.blok {
+    width: 100%;
+    .blok-box {
+        display: flex;
+        .blok-blog-1 {
+            width: 50%;
+            img {
+                width: 50%;
+                border-radius: 50%;
+            }
+        }
+        .blok-blog-2 {
+            width: 50%;
+            
+        }
+    }
+
 }
