--- a/css/style.scss
+++ b/css/style.scss
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     text-decoration: none;
-    list-style: none;
     box-sizing: border-box;
 }
 @font-face {
@@ -25,7 +24,9 @@ body{
 @mixin colornav {
     color: #fff;
 }
-
+h4 {
+    display: inline-block;
+}
 .header {
     #logo {
         //  TODO:
@@ -42,10 +43,7 @@ body{
             animation: hover 4s infinite;
         
     }
-<<<<<<< HEAD
-=======
-    height: 100vh;
->>>>>>> 873b863ca8812100fed43d2e335a544219b3fac5
+    height: 87vh;
     @include colornav();
     .navbar-full {
         background-color: #3B1D60;
@@ -57,7 +55,7 @@ body{
             justify-content: space-between;
             align-items: center;
             font-size: 12px;
-            
+            list-style: none;
             .nav-right {
                 display: flex;
                 align-items: center;
@@ -73,6 +71,7 @@ body{
                     }
                     a {
                         @include colornav();
+                        transition: 0.3s linear;
                         &:hover {
                             color: #F2994A !important;
                         }
@@ -87,6 +86,7 @@ body{
                         border-radius: 5px;
                         @include colornav();
                         cursor: pointer;
+                        transition: 0.3s linear;
                         &:hover {
                             border: 1px solid #F2994A;
                             background-color: transparent;
@@ -121,7 +121,11 @@ body{
             h1 {
                 font-size: 25px;
                 margin-left: 5px;
+                transition: 0.3s linear;
                 @include colornav();
+                &:hover {
+                    color: #F2994A;
+                }
             }
             ul {
                 margin-left: 300px;
@@ -132,6 +136,7 @@ body{
                         @include colornav();
                         text-transform: uppercase;
                         font-size: 12px;
+                        transition: 0.3s linear;
                         &:hover {
                             color: #F2994A !important;
                         }
@@ -203,19 +208,134 @@ body{
 
 .blok {
     width: 100%;
+    .blok-h1 {
+        text-transform: uppercase;
+        text-align: center;
+        @include colornav();
+    }
     .blok-box {
-        display: flex;
-        .blok-blog-1 {
-            width: 50%;
-            img {
-                width: 50%;
-                border-radius: 50%;
+        
+        .blok-box-blog {
+            display: flex;
+            justify-content: center;
+            margin-top: 100px;
+            .blok-blog-1 {
+                // width: 30%;
+                width: 380px;
+                height: 380px;
+                overflow: hidden;
+                border-radius: 20px;
+               
+                transform-origin: center;
+                transform: scale3d(1,1,1);
+                transition: 0.5s all linear;
+                img {
+                    width: 380px;
+                    height: 380px;
+                    transform-origin: center;
+                    transform: scale3d(1,1,1);
+                    transition: 0.5s all linear;
+                    // margin-left: 50px;
+                    opacity: 0.8;
+                    cursor: zoom-in;
+                    &:hover {
+                        opacity: 1;
+                        width: 400px;
+                        height: 400px;
+                    }
+                }
+                
+            }
+            .blok-blog-2 {
+                padding-top: 70px;
+                margin-left: 10%;
+                width: 30%;
+                .blok-title {
+                    display: flex;
+                    white-space: nowrap;
+
+                    img {
+                        width: 40px;
+                    }
+                    h1 {
+                        margin-left: 15px;
+                        font-size: 50px;
+                        @include colornav();
+                        border-bottom: 5px solid rgba(120, 119, 116, 1);
+                    }
+                }
+                .link-click {
+                    width: 90%;
+                    
+                    span {
+                        color: rgba(120, 119, 116, 1);
+                        font-size: 20px;
+                    }
+                    margin-bottom: 15px;
+    
+                }
+                a {
+                    display: inline-block;
+                    padding: 5px;
+                    background-color: transparent;
+                    border-radius: 5px;
+                &:hover {
+                    background-color: #131177;
+                }
+                }
+                .text-p {
+                    margin-top: 15px;
+                    font-size: 20px;
+                    width: 90%;
+                    @include colornav();
+                    border-left: 4px solid #99EFD0;
+                    padding-left: 15px;
+                    padding-top: 10px;
+                    padding-bottom: 10px;
+                }
             }
         }
-        .blok-blog-2 {
-            width: 50%;
+        .blok-box-blog {
             
+            .blok-blog-3 {
+                width: 40%;
+                padding-right: 10%;
+                
+            }
         }
     }
 
 }
+.teg-ol {
+    border-left: 4px solid #99EFD0;
+    padding: 10px 0;
+    padding-left: 35px;
+    li {
+        font-size: 20px;
+        @include colornav();
+        font-family: 'Gilroy';
+    }
+}
+
+.teg-ul {
+    border-left: 4px solid #99EFD0;
+    padding: 10px 0;
+    padding-left: 15px;
+    list-style: none;
+    li {
+        font-size: 20px;
+        @include colornav();
+        font-family: 'Gilroy';
+        padding-bottom: 10px;
+        padding-bottom: 5px;
+        font-weight: 900;
+    }
+    p {
+        font-size: 20px;
+        @include colornav();
+        font-family: sans-serif;
+        font-weight: 100 !important;
+        display: none;
+    }
+}
+
