--- a/css/style.scss
+++ b/css/style.scss
@@ -221,8 +221,8 @@ h4 {
     width: 100%;
     .blok-h1 {
         text-transform: uppercase;
-        font-size: 40px;
-        width: 60%;
+        font-size: 30px;
+        width: 50%;
         text-align: center;
         margin: 0 auto;
         color: #99EFD0;
@@ -275,6 +275,7 @@ h4 {
                     h1 {
                         margin-left: 15px;
                         font-size: 50px;
+                        font-size: 30px;
                         @include colornav();
                         border-bottom: 5px solid rgba(120, 119, 116, 1);
                     }
@@ -322,12 +323,101 @@ h4 {
 
 }
 
+.services {
+    .services-h1{
+        text-align: center;
+        font-size: 30px;
+        margin-top: 100px;
+        color: #99EFD0;
+        margin-bottom: 30px;
+    }
+    .services-box {
+        display: flex;
+        // justify-content: space-between;
+        flex-wrap: wrap;
+        // height: 600px;
+        .card-logo {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            // margin-right: 50px;
+            
+            .card {
+                width: 300px;
+                height:300px;
+                overflow: hidden;
+                border-radius: 20px;
+                background-color: #fff;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+            img {
+                width: 90%;
+                height: 90%;
+                border-radius: 20px;
+                transition: .5s;
+                // transform-origin: center;
+                cursor: pointer;
+                &:hover {
+                    width: 95%;
+                    height: 95%;
+                }
+            }
+            .card-h1 {
+                margin-top: 30px;
+                text-align: center;
+                color: #99EFD0;
+                font-size: 25px;
+                padding-bottom: 50px;
+                text-transform: uppercase;
+            }
+        }
+    }
+}
+
 .location {
-    margin-top: 100px;
-    text-align: center;
-    color: #99EFD0;
-    h1{
-        // color: #000;
+    h1 {
+        text-align: center;
+        padding-top: 100px;
+        color: #99EFD0;
+        font-size: 30px;
+    }
+    .location-box {
+        margin-top: 100px;
+        text-align: center;
+        color: #99EFD0;
+        display: flex;
+        h5,i {
+            color: #fff;
+            font-size: 20px;
+            padding: 0 10px;
+            padding-top: 20px;
+        }
+        i:hover {
+            color: #F2994A;
+        }
+        .loc-blok-1 {
+            display: flex;
+            flex-direction: column;
+            width: 50%;
+            height: 50vh;
+            justify-content: center;
+            // align-items: center;
+            .loc-blog-1 {
+                display: flex;
+            }
+        }
+        .loc-blok-2 {
+            width: 50%;
+            height: 50vh;
+            height: 100%;
+            margin-bottom: 100px;
+            iframe {
+                width: 100%;
+                height: 50vh;
+            }
+        }
     }
 }
 
@@ -479,6 +569,7 @@ h4 {
     border-left: 4px solid #99EFD0;
     padding: 10px 0;
     padding-left: 35px;
+    margin-top: 30px;
     li {
         font-size: 20px;
         @include colornav();
@@ -508,3 +599,21 @@ h4 {
     }
 }
 
+
+.swiper {
+    width: 100%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+
+  .swiper-slide {
+    background-position: center;
+    background-size: cover;
+    width: 300px;
+    height: 350px;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+  }
