--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,35 @@
   font-family: sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+#nav-up {
+  position: fixed;
+  display: none;
+  bottom: 0;
+  right: 5%;
+  font-size: 50px;
+  color: #F2994A;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.nav-up-block {
+  display: block !important;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #241752;
+  border-radius: 5px;
+}
+
 @font-face {
   font-family: 'Gilroy';
   src: url("../gilroy/Gilroy-SemiBoldItalic.ttf") format("truetype");
@@ -31,12 +60,6 @@ body {
 
 h4 {
   display: inline-block;
-}
-
-.clock {
-  font-size: 100px;
-  margin-left: 100px;
-  display: block;
 }
 
 .header {
@@ -762,5 +785,178 @@ h4 {
 .swiper-slide img {
   display: block;
   width: 100%;
+}
+
+.show-login {
+  display: none;
+}
+
+.Sign_section {
+  width: 100%;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.box {
+  position: relative;
+  padding: 50px;
+  width: 380px;
+  height: 480px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #051024;
+  border-radius: 10px;
+}
+
+.box .form {
+  position: relative;
+  width: 100%;
+}
+
+.box .form h2 {
+  color: #b5b7bf;
+  font-weight: 600;
+  font-size: 25px;
+  margin-bottom: 30px;
+  text-align: center;
+  font-family: sans-serif;
+}
+
+.box .form span {
+  position: absolute;
+  left: 120px;
+  top: 40px;
+  display: block;
+  width: 40px;
+  border-bottom: 2px solid red;
+}
+
+.box .form .input_sign {
+  position: relative;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.box .form .input_sign input {
+  width: 100%;
+  outline: none;
+  border: none;
+  border-bottom: 2px solid #1f2e45;
+  background: transparent;
+  padding: 8px 10px;
+  padding-left: 30px;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.box .form .input_sign input::-webkit-input-placeholder {
+  color: #b5b7bf;
+  font-weight: bold;
+}
+
+.box .form .input_sign input:-ms-input-placeholder {
+  color: #b5b7bf;
+  font-weight: bold;
+}
+
+.box .form .input_sign input::-ms-input-placeholder {
+  color: #b5b7bf;
+  font-weight: bold;
+}
+
+.box .form .input_sign input::placeholder {
+  color: #b5b7bf;
+  font-weight: bold;
+}
+
+.box .form .input_sign input[type='button'] {
+  background: #ed3b0f;
+  color: #fff;
+  padding: 14px 10px;
+  border-radius: 6px;
+  border: none;
+  cursor: pointer;
+  font-size: 12px;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+
+.box .form .input_sign i {
+  position: absolute;
+  left: 0;
+  top: 10px;
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
+  color: #1f2e45;
+}
+
+#check {
+  margin-right: 10px;
+}
+
+#checked {
+  margin-right: 10px;
+}
+
+.remember {
+  position: relative;
+  display: inline-block;
+  color: #7f8290;
+  font-weight: bold;
+  font-size: 14px;
+  margin: 25px 0 35px;
+  cursor: pointer;
+  font-family: sans-serif;
+}
+
+#Sign {
+  font-size: 18px;
+}
+
+.form {
+  position: relative !important;
+}
+
+.login-x {
+  display: block;
+  font-size: 30px;
+  position: absolute;
+  right: -20px;
+  top: -35px;
+  color: #b5b7bf;
+  cursor: pointer;
+}
+
+.sign-in-x {
+  top: -65px;
+}
+
+.show-login-new {
+  display: none;
+}
+
+.login-block {
+  display: block !important;
 }
 /*# sourceMappingURL=style.css.map */
