--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ p {
 }
 
 body {
+  overflow-x: hidden !important;
   background: linear-gradient(222.26deg, #3B1D60 1.22%, #040D3E 106.28%);
 }
 
@@ -204,7 +205,7 @@ h4 {
 }
 
 .header .navbar-full .navbar ul {
-  margin-left: 300px;
+  margin-left: 150px;
 }
 
 .header .navbar-full .navbar ul li {
@@ -762,5 +763,116 @@ h4 {
 .swiper-slide img {
   display: block;
   width: 100%;
+}
+
+.navbar_icon {
+  display: none;
+}
+
+#check {
+  display: none;
+}
+
+.checkbtn {
+  display: block;
+}
+
+@media (min-width: 992px) and (max-width: 1200px) {
+  .footer_part_of {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    width: 88%;
+    margin: 0 auto;
+  }
+  .content_img {
+    width: 100%;
+  }
+  .content_img img {
+    width: 90%;
+    margin-left: -1rem;
+    margin-top: 2rem;
+  }
+  .footer_part {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .information {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding-left: 6rem !important;
+  }
+  .text {
+    display: none;
+  }
+  .navbar_icon {
+    display: block;
+    font-size: 25px;
+    margin-left: 30px;
+  }
+  .nav-menu {
+    display: none;
+    position: fixed;
+    left: -100%;
+    margin-top: 80px;
+    width: 100%;
+    height: 100vh;
+    background-color: red;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+  }
+  .nav-menu ul li {
+    display: block;
+    text-align: center;
+  }
+  .nav-menu-action {
+    position: fixed;
+    left: 0;
+    margin-top: 80px;
+    width: 100%;
+    height: 100vh;
+    background-color: red;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+  }
+  .nav-menu-action ul li {
+    display: block;
+    text-align: center;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+  .text {
+    display: none;
+  }
+  .navbar_icon {
+    display: block;
+    font-size: 25px;
+    margin-left: 30px;
+  }
+  .footer_part {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 100%;
+    margin: 0 auto;
+    padding-top: 6rem;
+  }
+  .main {
+    width: 100%;
+    margin: 0 auto;
+  }
+  .header {
+    width: 100%;
+    margin: 0 auto;
+  }
+  .nav-menu {
+    display: none;
+  }
+  .footer_container {
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=style.css.map */
