--- a/css/style.scss
+++ b/css/style.scss
@@ -13,6 +13,7 @@ p {
     font-family: 'Gilroy';
 }
 body {
+    overflow-x: hidden !important;
     background: linear-gradient(222.26deg, #3B1D60 1.22%, #040D3E 106.28%);
 }
 .container {
@@ -133,7 +134,7 @@ h4 {
                 }
             }
             ul {
-                margin-left: 300px;
+                margin-left: 150px;
                 li {
                     display: inline-block;
                     margin-right: 20px;
@@ -617,3 +618,137 @@ h4 {
     display: block;
     width: 100%;
   }
+
+.navbar_icon{
+    display: none;
+    
+
+}
+
+#check{
+    display: none;
+}
+
+.checkbtn{
+    display: block;
+}
+
+
+
+
+
+  
+//   MEDIA
+
+@media (min-width: 992px) and (max-width: 1200px){
+    .footer_part_of{
+        flex-wrap: wrap;
+        width: 88%;
+        margin: 0 auto;
+    }
+
+    .content_img{
+        width: 100%;
+        img{
+            width: 90%;
+            margin-left: -1rem;
+            margin-top: 2rem;
+           
+
+        }
+    }
+
+    .footer_part{
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .information{
+        flex-wrap: wrap;
+        padding-left: 6rem !important;
+
+    }
+
+    .text{
+        display: none;
+    }
+
+
+    .navbar_icon{
+        display: block;
+        font-size: 25px;
+        margin-left: 30px;
+    }
+
+    .nav-menu{
+        display: none;
+        position: fixed;
+        left: -100%;
+        margin-top: 80px;
+        width: 100%;
+        height: 100vh;
+        background-color: red;
+        transition: all 0.5s;
+        ul li{
+            display: block;
+            text-align: center;
+        }
+    }
+    .nav-menu-action{
+        position: fixed;
+        left: 0;
+        margin-top: 80px;
+        width: 100%;
+        height: 100vh;
+        background-color: red;
+        transition: all 0.5s;
+        ul li{
+            display: block;
+            text-align: center;
+        }
+    }
+
+    
+    
+}
+
+@media (min-width: 768px) and (max-width: 992px){
+    .text{
+        display: none;
+    }
+
+    .navbar_icon{
+        display: block;
+        font-size: 25px;
+        margin-left: 30px;
+    }
+
+    .footer_part{
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        margin: 0 auto;
+        padding-top: 6rem;
+    }
+
+    .main{
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .header{
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .nav-menu{
+        display: none;
+    }
+
+    .footer_container{
+        width: 100%;
+    }
+
+    
+
+}
