--- a/css/style.css
+++ b/css/style.css
@@ -46,17 +46,13 @@ p {
 }
 
 body {
-  overflow-x: hidden !important;
+  overflow-x: hidden;
   background: linear-gradient(222.26deg, #3B1D60 1.22%, #040D3E 106.28%);
 }
 
 .container {
   width: 85%;
   margin: 0 auto;
-}
-
-body {
-  overflow-x: hidden;
 }
 
 h4 {
@@ -228,7 +224,7 @@ h4 {
 }
 
 .header .navbar-full .navbar ul {
-  margin-left: 150px;
+  margin-left: 300px;
 }
 
 .header .navbar-full .navbar ul li {
@@ -788,114 +784,176 @@ h4 {
   width: 100%;
 }
 
-.navbar_icon {
+.show-login {
   display: none;
+}
+
+.Sign_section {
+  width: 100%;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.box {
+  position: relative;
+  padding: 50px;
+  width: 380px;
+  height: 480px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #051024;
+  border-radius: 10px;
+}
+
+.box .form {
+  position: relative;
+  width: 100%;
+}
+
+.box .form h2 {
+  color: #b5b7bf;
+  font-weight: 600;
+  font-size: 25px;
+  margin-bottom: 30px;
+  text-align: center;
+  font-family: sans-serif;
+}
+
+.box .form span {
+  position: absolute;
+  left: 120px;
+  top: 40px;
+  display: block;
+  width: 40px;
+  border-bottom: 2px solid red;
+}
+
+.box .form .input_sign {
+  position: relative;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.box .form .input_sign input {
+  width: 100%;
+  outline: none;
+  border: none;
+  border-bottom: 2px solid #1f2e45;
+  background: transparent;
+  padding: 8px 10px;
+  padding-left: 30px;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.box .form .input_sign input::-webkit-input-placeholder {
+  color: #b5b7bf;
+  font-weight: bold;
+}
+
+.box .form .input_sign input:-ms-input-placeholder {
+  color: #b5b7bf;
+  font-weight: bold;
+}
+
+.box .form .input_sign input::-ms-input-placeholder {
+  color: #b5b7bf;
+  font-weight: bold;
+}
+
+.box .form .input_sign input::placeholder {
+  color: #b5b7bf;
+  font-weight: bold;
+}
+
+.box .form .input_sign input[type='button'] {
+  background: #ed3b0f;
+  color: #fff;
+  padding: 14px 10px;
+  border-radius: 6px;
+  border: none;
+  cursor: pointer;
+  font-size: 12px;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+
+.box .form .input_sign i {
+  position: absolute;
+  left: 0;
+  top: 10px;
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
+  color: #1f2e45;
 }
 
 #check {
-  display: none;
+  margin-right: 10px;
 }
 
-.checkbtn {
+#checked {
+  margin-right: 10px;
+}
+
+.remember {
+  position: relative;
+  display: inline-block;
+  color: #7f8290;
+  font-weight: bold;
+  font-size: 14px;
+  margin: 25px 0 35px;
+  cursor: pointer;
+  font-family: sans-serif;
+}
+
+#Sign {
+  font-size: 18px;
+}
+
+.form {
+  position: relative;
+}
+
+.login-x {
+  display: block;
+  font-size: 30px;
+  position: absolute;
+  right: -20px;
+  top: -35px;
+  color: #b5b7bf;
+  cursor: pointer;
+}
+
+.sign-in-x {
+  top: -65px;
+}
+
+.show-login-new {
   display: block;
 }
 
-@media (min-width: 992px) and (max-width: 1200px) {
-  .footer_part_of {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    width: 88%;
-    margin: 0 auto;
-  }
-  .content_img {
-    width: 100%;
-  }
-  .content_img img {
-    width: 90%;
-    margin-left: -1rem;
-    margin-top: 2rem;
-  }
-  .footer_part {
-    width: 90%;
-    margin: 0 auto;
-  }
-  .information {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    padding-left: 6rem !important;
-  }
-  .text {
-    display: none;
-  }
-  .navbar_icon {
-    display: block;
-    font-size: 25px;
-    margin-left: 30px;
-  }
-  .nav-menu {
-    display: none;
-    position: fixed;
-    left: -100%;
-    margin-top: 80px;
-    width: 100%;
-    height: 100vh;
-    background-color: red;
-    -webkit-transition: all 0.5s;
-    transition: all 0.5s;
-  }
-  .nav-menu ul li {
-    display: block;
-    text-align: center;
-  }
-  .nav-menu-action {
-    position: fixed;
-    left: 0;
-    margin-top: 80px;
-    width: 100%;
-    height: 100vh;
-    background-color: red;
-    -webkit-transition: all 0.5s;
-    transition: all 0.5s;
-  }
-  .nav-menu-action ul li {
-    display: block;
-    text-align: center;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 992px) {
-  .text {
-    display: none;
-  }
-  .navbar_icon {
-    display: block;
-    font-size: 25px;
-    margin-left: 30px;
-  }
-  .footer_part {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    width: 100%;
-    margin: 0 auto;
-    padding-top: 6rem;
-  }
-  .main {
-    width: 100%;
-    margin: 0 auto;
-  }
-  .header {
-    width: 100%;
-    margin: 0 auto;
-  }
-  .nav-menu {
-    display: none;
-  }
-  .footer_container {
-    width: 100%;
-  }
+.login-block {
+  display: block !important;
 }
 /*# sourceMappingURL=style.css.map */
