--- a/css/style.scss
+++ b/css/style.scss
@@ -7,6 +7,7 @@
 }
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 #nav-up {
     position: fixed;
@@ -87,6 +88,7 @@ h4 {
                 .language {
                     font-size: 12px;
                     padding-right: 20px;
+                    white-space: nowrap;
                     .lan-uz {
                         padding-right: 10px;
                         border-right: 1px solid #fff;
@@ -103,7 +105,10 @@ h4 {
                     }
                 }
                 .buttons {
+                    word-wrap: normal;
+                    white-space: nowrap;
                     font-size: 12px;
+                    
                     .btn {
                         padding: 6px 15px;
                         background-color: #F2994A;
@@ -132,6 +137,9 @@ h4 {
                     .sign-in {
                         margin-right: 20px;
                     }
+                    @media (max-width: 600px)  {
+                        display: none;
+                    }
                 }
             }
             .logo {
@@ -153,7 +161,56 @@ h4 {
                 }
             }
             ul {
+                .buttons-hidden {
+                    display: none;
+                }
+                .checkbtn1 {
+                    display: none;
+                }
                 margin-left: 300px;
+                @media (max-width: 1345px) {
+                    margin-left: 150px;
+                }
+                @media (max-width: 1180px) {
+                    margin-left: 30px;
+                }
+                @media (max-width: 1055px) {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    z-index: 100;
+                    background-color: #3B1D60;
+                    position: fixed;
+                    top: -100%;
+                    left: 0;
+                    width: 100%;
+                    height: 100vh;
+                    margin: 0 !important;
+                    transition: 0.5s all; 
+                    
+                }
+                @media (max-width: 600px) {
+                    .buttons-hidden {
+                        display: block;
+                        .btn {
+                            padding: 6px 15px;
+                            display: block;
+                            width: 100%;
+                            margin-bottom: 15px;
+                            background-color: #F2994A;
+                            border: 1px solid transparent;
+                            border-radius: 5px;
+                            @include colornav();
+                            cursor: pointer;
+                            transition: 0.3s linear;
+                            &:hover {
+                                border: 1px solid #F2994A;
+                                background-color: transparent;
+                                color: #F2994A;
+                            }
+                        }
+                    }
+                }
                 li {
                     display: inline-block;
                     margin-right: 20px;
@@ -172,6 +229,48 @@ h4 {
             
         }
     }
+}
+.clock {
+    display: none;
+    font-size: 60px !important;
+    padding-bottom: 50px;
+}
+.short-nav {
+    @media (max-width: 1055px) {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        z-index: 100;
+        background-color: #3B1D60;
+        position: fixed !important;
+        top: 0 !important;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        margin: 0 !important;
+        li {
+            display: block;
+            padding: 20px 0;
+            a {
+                font-size: 30px !important;
+                @media (max-width: 600px)  {
+                    font-size: 15px !important;
+                }
+            }
+        }
+        .checkbtn1 {
+            display: block !important;
+            color: white;
+            font-size: 30px;
+            position: fixed;
+            top:20px;
+            right: 40px;
+        }
+        .clock {
+            display: block;
+        }
+}
 }
 
 .content{
@@ -235,6 +334,26 @@ h4 {
 
         }
     }
+    @media (max-width: 1050px) {
+        h1 {
+            width: 100% !important;
+        }
+        p {
+            width: 100% !important;
+        }
+    }
+    @media (max-width: 700px) { 
+        h1 {
+            font-size: 15px !important;
+            line-height: normal !important;
+        }
+        p {
+            font-size: 12px !important;
+        }
+        #input {
+            width: 60% !important;
+        }
+    }
 }
 
 .blok {
@@ -249,7 +368,6 @@ h4 {
         // @include colornav();
     }
     .blok-box {
-        
         .blok-box-blog {
             display: flex;
             justify-content: center;
@@ -330,6 +448,25 @@ h4 {
                     padding-bottom: 10px;
                 }
             }
+            @media (max-width: 875px) {
+                display: flex !important;
+                flex-direction: column !important;
+                justify-content: space-between !important;
+                flex-wrap: wrap;
+                width: 600px !important;
+                margin-left: 15%;
+            .blok-blog-1{
+                width: 60%;
+                padding-top: 15px;
+                // width: 500px !important;
+                img {
+                    // padding-right: 100px;
+                }
+            }
+            .blok-blog-2{
+                width: 60%;
+            }
+            }
         }
         .blok-box-blog {
             
@@ -338,9 +475,19 @@ h4 {
                 padding-right: 10%;
                 
             }
+           
+        }
+      
+    }
+    @media (max-width: 750px) {
+        h1 {
+            font-size: 20px !important;
+        }
+        .blok-box-blog-1 {
+            display: flex !important;
+            flex-direction: column-reverse !important;
         }
     }
-
 }
 
 .services {
@@ -631,6 +778,10 @@ h4 {
     background-size: cover;
     width: 300px;
     height: 350px;
+    @media (max-width: 750px) {
+        width: 200px;
+        height: 250px;
+    }
   }
 
   .swiper-slide img {
@@ -740,6 +891,7 @@ h4 {
 
 #check{
     margin-right: 10px;
+    
 }
 
 #checked{
@@ -785,13 +937,359 @@ h4 {
 }
 .checkbtn {
     display: none;
+    font-size: 30px;
+    margin-left: 10px;
+    @media (max-width: 1055px) {
+        display: block;
+    }
 }
-#check {
+#check-my {
     display: none;
+    
 }
 
-//   MEDIA
+@media(min-width: 992px) and (max-width: 1200px){
+    .footer_part_of{
+        display: flex;
+        justify-content: space-between !important;
+        // flex-wrap: wrap;
+        margin-left: -1px !important;
+        width: 90%;
+        margin: 0 auto;
+    }
 
-@media (max-width: 1200px) {
+    .footer_part{
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .content_img{
+        width: 100%;
+        img{
+            width: 90%;
+            margin-left: -1rem;
+            margin-top: 2rem;
+
+        }
+    }
+
+    .information{
+        flex-wrap: wrap;
+        padding-left: 6rem !important;
+
+    }
+
+    .text{
+        display: none !important;
+    }
+
+
+    .navbar_icon{
+        display: block;
+        font-size: 25px;
+        margin-left: 30px;
+    }
+
+    .nav-menu{
+        display: none;
+        position: fixed;
+        left: -100%;
+        margin-top: 80px;
+        width: 100%;
+        height: 100vh;
+        background-color: red;
+        transition: all 0.5s;
+        ul li{
+            display: block;
+            text-align: center;
+        }
+    }
+    .nav-menu-action{
+        position: fixed;
+        left: 0;
+        margin-top: 80px;
+        width: 100%;
+        height: 100vh;
+        background-color: red;
+        transition: all 0.5s;
+        ul li{
+            display: block;
+            text-align: center;
+        }
+    }
+}
+
+@media (min-width: 768px) and (max-width: 992px){
+    .text{
+        display: none;
+    }
+
+    .information{
+        flex-wrap: wrap;
+        padding-left: 4.5rem !important;
+
+    }
+
+    .navbar_icon {
+        display: block;
+        font-size: 25px;
+        margin-left: 30px;
+    }
+
+
+    .main{
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .header{
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .nav-menu{
+        display: none;
+    }
+
+
+    .footer_part_of{
+        display: flex;
+        width: 100%;
+       
+    }
+
+    .footer_part{
+        width: 100%;
+        margin: 0 auto;
+    }
+    
+    .blok-blog-2{
+        width: 90%;
+        margin: 0 auto;
+    }
+    
+
+}
+
+@media (max-width: 992px){
+    .text {
+        display: none !important;
+    }
+    .footer_part_of{
+        display: flex;
+        width: 85%;
+        margin-left: 4% !important;
+        margin: 0;
+    }
+
+    .footer_part{
+        width: 90%;
+        margin: 0 auto;
+    }
+}
+
+@media (max-width: 990px){
+    .footer_part_of{
+        display: flex;
+        width: 85%;
+        margin-left: 4% !important;
+        margin: 0;
+    }
+
+    .footer_part{
+        width: 90%;
+        margin: 0 auto;
+    }
+}
+
+@media (max-width: 942px){
+    .footer_part_of{
+        display: flex;
+        width: 85%;
+        margin-left: -1px !important;
+        margin: 0;
+    }
+
+    .footer_part{
+        width: 90%;
+        margin: 0 auto;
+    }
+}
+
+@media (max-width: 907px){
+    .footer_part_of{
+        display: flex;
+        width: 85%;
+        margin-left: -1% !important;
+        margin: 0;
+    }
+
+    .footer_part{
+        width: 90%;
+        margin: 0 auto;
+    }
+}
+
+
+@media (max-width: 859px){
+    .footer_part_of{
+        display: flex;
+        width: 85%;
+        margin-left: -1% !important;
+        margin: 0;
+    }
+
+    .footer_part{
+        width: 90%;
+        margin: 0 auto;
+    }
+}
+
+@media (max-width: 809px){
+    .footer_part_of{
+        display: flex;
+        width: 85%;
+        margin-left: -7% !important;
+        margin: 0;
+    }
+
+    .footer_part{
+        width: 90%;
+        margin: 0 auto;
+    }
+}
+
+
+@media (max-width: 779px){
+    .footer_part_of{
+        display: flex;
+        width: 85%;
+        margin-left: -7% !important;
+        margin: 0;
+    }
+
+    .footer_part{
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .information{
+        flex-wrap: wrap;
+        padding-left: 4.5rem !important;
+
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1200px){
+    .footer_part_of{
+        display: flex;
+        justify-content: space-between !important;
+        flex-wrap: wrap;
+        width: 60%;
+        margin: 0 auto;
+    }
+
+    .footer_part{
+        width: 60%;
+        margin: 0 auto;
+    }
+
+    .content_img{
+        width: 100%;
+        img{
+            width: 90%;
+            margin-left: -1rem;
+            margin-top: 2rem;
+
+        }
+    }
+
+    .information{
+        flex-wrap: wrap;
+        padding-left: 6rem !important;
+
+    }
+
+    .text{
+        display: none;
+    }
+
+
+    .navbar_icon{
+        display: block;
+        font-size: 25px;
+        margin-left: 30px;
+    }
+
+    .nav-menu{
+        display: none;
+        position: fixed;
+        left: -100%;
+        margin-top: 80px;
+        width: 100%;
+        height: 100vh;
+        background-color: red;
+        transition: all 0.5s;
+        ul li{
+            display: block;
+            text-align: center;
+        }
+    }
+    .nav-menu-action{
+        position: fixed;
+        left: 0;
+        margin-top: 80px;
+        width: 100%;
+        height: 100vh;
+        background-color: red;
+        transition: all 0.5s;
+        ul li{
+            display: block;
+            text-align: center;
+        }
+    }
+}
+
+
+
+@media (min-width: 768px) and (max-width: 992px){
+    .text{
+        display: none;
+    }
+
+    .navbar_icon{
+        display: block;
+        font-size: 25px;
+        margin-left: 30px;
+    }
+
+    .footer_part{
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        margin: 0 auto;
+        padding-top: 6rem;
+    }
+
+    .main{
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .header{
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .nav-menu{
+        display: none;
+    }
+
+    .footer_container{
+        width: 100%;
+    }
+
+    
+    
 
 }
