login sign up xatosi to'grillandi

--- a/css/style.css
+++ b/css/style.css
@@ -196,7 +196,7 @@ h4 {
           animation: click 0.1s forwards;
 }
 
-.header .navbar-full .navbar .nav-right .buttons .sign-in {
+.header .navbar-full .navbar .nav-right .buttons .sign-inn {
   margin-right: 20px;
 }
 
