--- a/css/style.scss
+++ b/css/style.scss
@@ -134,7 +134,7 @@ h4 {
                             animation: click 0.1s forwards;
                         }
                     }
-                    .sign-in {
+                    .sign-inn {
                         margin-right: 20px;
                     }
                     @media (max-width: 600px)  {
